--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,1 +1,24 @@
-Main Page, Hi!
+<div class="row">
+  <div class="col-md-12 text-right">
+    Filter: <input type="text" ng-model="filter"/>
+  </div>
+</div>
+
+<table class="pull-list table table-hover">
+  <thead>
+    <tr>
+      <th ng-click="sort('series')" class="col-sm-5">Series</th>
+      <th ng-click="sort('publisher')" class="col-sm-3">Publisher</th>
+      <th ng-click="sort('issues')" class="col-sm-2"># of Issues</th>
+      <th ng-click="sort('created')" class="col-sm-2">Added</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr ng-repeat="pull in pulls | orderBy: sortBy | filter: filter">
+      <td>{{ pull.series }}</td>
+      <td>{{ pull.publisher }}</td>
+      <td>{{ pull.issues }}</td>
+      <td>{{ pull.created | date: shortDate }}</td>
+    </tr>
+  </tbody>
+</table>
